--- a/brandstory.html
+++ b/brandstory.html
@@ -54,17 +54,14 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="about.html" aria-expanded="false"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
-                        About Chris</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Brand Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="brandstory.html"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>Brand Story</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="examples.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>Imagination can deliver</a></li></ul>
+                <li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Brand Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="brandstory.html"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>Brand Story</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="contact.html#header15-12"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>
                     Contact</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header9 cid-s1UPLcD5lD" id="header9-1h">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="header9 cid-s1UPLcD5lD" id="header9-1h">
 
     
 
@@ -73,12 +70,9 @@
     <div class="container">
         <div class="media-container-column mbr-white">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-2">Brand Story</h1>
-            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">Korusu is the Turkish word for Grove.</h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">I got the idea for the name over 2 days of brain-storming and remembering where I used to live as a child in Istanbul from 1972 - 1977. <br>We lived on a steep street overlooking the Bosphorous near the Rumeli Hisar castle. It was called Ayse Sultan Korusu and the thought of linking my foundation brand to where my home was in those years and evoking thoughts of Fruit Trees in a Grove and using the Turkish word became very appealing. <br>I think it sounds good too, like "Chorus" with "u" added :-)<br>
-<br><strong>You can discover details about Hot Toast, Interest Sparks and Idea Haven </strong><br><strong>on the <a href="portfolio.html">Korusu brand portfolio page</a>.
-<br></strong>
-<br><strong>Chris Swingler 
-<br>Idea Nurturer &amp; Catalyst&nbsp;</strong></p>
+            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>Korusu is the Turkish word for Grove</strong></h3>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">I got the idea for the name over 2 days of brain-storming and remembering where I used to live as a child in Istanbul from 1972 - 1977. <br>We lived on a steep street overlooking the Bosphorous near the Rumeli Hisar castle. It was called Ayse Sultan Korusu and the thought of naming the home of my creative brands with a name that came directly from&nbsp;where my home was in those years and evoking thoughts of Fruit Trees in a Grove and using the Turkish word became very appealing. <br><br>I think it sounds good too, like "Chorus" with (a) "u" added :-)<br>
+<br><strong>You can find out more about Hot Toast, Interest Sparks and Idea Haven </strong><br><strong>on the <a href="portfolio.html">Korusu brand portfolio page</a></strong><br></p>
             
         </div>
     </div>
