--- a/contact.html
+++ b/contact.html
@@ -54,17 +54,14 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="about.html" aria-expanded="false"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
-                        About Chris</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Brand Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="brandstory.html"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>Brand Story</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="examples.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>Imagination can deliver</a></li></ul>
+                <li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Brand Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="brandstory.html"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>Brand Story</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="contact.html#header15-12"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>
                     Contact</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -81,7 +78,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="La8T9EZv71ig8VSngDDADQSStQ2UAlT9vNGt7ah+79lStk5q1FIIvoBQH0436VqGFKF2LS1OY4Z6i+KrkSRnlu9YZuEXsagtFLvofcZLPfJanZnLI6ZbFp+5xPC5c62S">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="udyszt4mgT2KAZpHEAUaHkF5XHkYacLmZnH03Wn+uU8Wr8B+LYe/ErXfynMBScl0rZJMYNXleaMKxKzaDZ6ExfWx4K9cNaMcuqxuEeSQ0aR445TQ9F6FsV6RsC6V9Ixg">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
