--- a/ideahaven.html
+++ b/ideahaven.html
@@ -54,17 +54,14 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="about.html" aria-expanded="false"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
-                        About Chris</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Brand Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="brandstory.html"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>Brand Story</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="examples.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>Imagination can deliver</a></li></ul>
+                <li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>Brand Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="brandstory.html"><span class="mbri-sun mbr-iconfont mbr-iconfont-btn"></span>Brand Story</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="contact.html#header15-12"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>
                     Contact</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-s1OpQITyaX" id="content5-n">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-s1OpQITyaX" id="content5-n">
 
     
 
