--- a/interestsparks.html
+++ b/interestsparks.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="features2 cid-s1OnFsoNOw" id="features2-m">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="features2 cid-s1OnFsoNOw" id="features2-m">
 
     
 
@@ -228,7 +228,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
