--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
@@ -160,8 +160,8 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-5">
                     Korusu - Project services</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    Above you will see a short presentation.<br>Here you can <a href="assets/files/KorusuServices.pdf" target="_blank">download a .pdf summary of experience and services</a>.<br>I look forward to speaking with you soon.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><strong>
+                    Above you will see a short presentation.<br>Here you can <a href="assets/files/ServicesSummary.pdf" target="_blank">download a .pdf summary of my services</a></strong><strong><a href="assets/files/Here%20to%20help%20your%20project.pdf" target="_blank"><br></a>I look forward to speaking with you soon.</strong></h3>
                 
             </div>
         </div>
@@ -235,7 +235,7 @@
   <script src="assets/slidervideo/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
